# git-selective-ignore

./: .gitignore  Cargo.toml  Makefile  README.md  Usage.md  cliff.toml
.github/workflows/: workflow.yml
src/: lib.rs  main.rs  tests.rs
src/builders/: hooks.rs  importer.rs  mod.rs  patterns.rs  reporter.rs  storage.rs  validator.rs
src/core/: config.rs  engine.rs  git.rs  mod.rs  version.rs
src/utils/: mod.rs
tests/: core_logic_test.rs
