# Cargo.toml

# This section defines fundamental information about your Rust project,
# similar to how a package.json works for Node.js or a pom.xml for Java.
[package]
# 'name' is the name of your executable binary and the package itself.
# This is how you'll typically run your application (e.g., `cargo run --bin setup-devbox`).
name = "git-selective-ignore"
# 'version' follows Semantic Versioning (Major.Minor.Patch).
# It indicates the current release version of your application.
version = "0.0.1"
# 'edition' specifies the Rust edition to use for compiling this package.
# Rust editions allow the language to evolve without breaking existing code.
# "2024" is a newer edition that enables modern Rust features and syntax.
edition = "2024"

# This section lists all the external crates (libraries) that your project depends on.
# Cargo automatically downloads, compiles, and links these dependencies for you.
[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
uuid = { version = "1.18.0", features = ["v4"] }
